--- a/StartOpenGLPractice/StartOpenGLPractice/StartOpenGLPractice.vcxproj.filters
+++ b/StartOpenGLPractice/StartOpenGLPractice/StartOpenGLPractice.vcxproj.filters
@@ -14,4 +14,12 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Practice1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\jakei\Downloads\glad (1)\src\glad.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
