--- a/StartOpenGLPractice/StartOpenGLPractice/StartOpenGLPractice.vcxproj.filters
+++ b/StartOpenGLPractice/StartOpenGLPractice/StartOpenGLPractice.vcxproj.filters
@@ -15,11 +15,22 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Practice1.cpp">
+    <ClCompile Include="Practice01.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="C:\Users\jakei\Downloads\glad (1)\src\glad.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Practicd02.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="PracticeFunction.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
