[Review]window 클래스 생성

--- a/Review/Review/Review.vcxproj
+++ b/Review/Review/Review.vcxproj
@@ -147,6 +147,10 @@
   <ItemGroup>
     <ClCompile Include="..\..\OpenGL\src\glad.c" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Window.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
