--- a/Review/Review/Review.vcxproj
+++ b/Review/Review/Review.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -147,7 +147,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\OpenGL\src\glad.c" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Window.cpp" />
+    <ClCompile Include="MyWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h" />
