[Review] 클래스 분할 후, 윈도우 셋팅 완료

--- a/Review/Review/Review.vcxproj
+++ b/Review/Review/Review.vcxproj
@@ -150,7 +150,7 @@
     <ClCompile Include="MyWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Window.h" />
+    <ClInclude Include="MyWindow.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
