--- a/Review/Review/Review.vcxproj.filters
+++ b/Review/Review/Review.vcxproj.filters
@@ -21,12 +21,12 @@
     <ClCompile Include="..\..\OpenGL\src\glad.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Window.cpp">
+    <ClCompile Include="MyWindow.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Window.h">
+    <ClInclude Include="MyWindow.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
