--- a/Review/Review/Review.vcxproj.filters
+++ b/Review/Review/Review.vcxproj.filters
@@ -24,10 +24,20 @@
     <ClCompile Include="MyWindow.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="MyShader.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyWindow.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="MyShader.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="vertexShader.shader" />
+    <None Include="fragmentShader.shader" />
   </ItemGroup>
 </Project>
