--- a/Review/Review/Review.vcxproj
+++ b/Review/Review/Review.vcxproj
@@ -80,8 +80,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\dev\LearnOpenGL\OpenGL\includes;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\dev\LearnOpenGL\OpenGL\libs;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\임재경\imjae\LearnOpenGL\OpenGL\includes;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\임재경\imjae\LearnOpenGL\OpenGL\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
