[Review] 프래그먼트 쉐이더 2개 사용해 색이 다른 삼각형 두개 그리기

--- a/Review/Review/Review.vcxproj.filters
+++ b/Review/Review/Review.vcxproj.filters
@@ -39,5 +39,6 @@
   <ItemGroup>
     <None Include="vertexShader.shader" />
     <None Include="fragmentShader.shader" />
+    <None Include="fragmentShader2.shader" />
   </ItemGroup>
 </Project>
