--- a/Review/Review/Review.vcxproj
+++ b/Review/Review/Review.vcxproj
@@ -156,6 +156,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="fragmentShader.shader" />
+    <None Include="fragmentShader2.shader" />
     <None Include="vertexShader.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
